# tenant-security-client-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  build.rs  flake.nix  rust-toolchain.toml
.github/workflows/: rust-ci.yaml  rust-daily.yaml
src/: aes.rs  cmk_edek.proto  dcp_edek.proto  icl_header_v4.proto  key_id_header.rs  lib.rs  signing.rs  vector_encryption_header.proto  vector_encryption_metadata.proto
src/v3/: aes.rs  mod.rs
src/v4/: aes.rs  attached.rs  mod.rs
src/v5/: attached.rs  key_id_header.rs  mod.rs
