[package]
name = "ironcore-documents"
description = "A library for working with IronCore Labs documents and header formats."
version = "0.1.0-pre.1"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
bytes = "1"
hmac = { version = "0.12", features = ["std"] }
protobuf = { version = "3.3", features = ["with-bytes"] }
rand = "0.8.5"
sha2 = "0.10"
thiserror = "1"

[build-dependencies]
protobuf-codegen = "3.3"

[dev-dependencies]
hex-literal = "0.4.1"
rand_chacha = "0.3.1"
