[package]
name = "ironcore-documents"
description = "A library for working with IronCore Labs documents and header formats."
version = "0.2.2-pre"
edition = "2021"
license = "AGPL-3.0-only"
documentation = "https://docs.rs/ironcore-documents"
readme = "README.md"
repository = "https://github.com/IronCoreLabs/ironcore-documents"
categories = ["algorithms", "cryptography"]
keywords = ["cryptography"]
rust-version = "1.70.0"

[dependencies]
aes-gcm = "0.10.3"
bytes = "1"
hmac = { version = "0.12", features = ["std"] }
itertools = "0.14.0"
protobuf = { version = "3.3", features = ["with-bytes"] }
rand = "0.9.0"
sha2 = "0.10"
thiserror = "2"

[build-dependencies]
protobuf-codegen = "3.3"

[dev-dependencies]
hex-literal = "0.4.1"
rand_chacha = "0.3.1"
